# yolo-ai-cmdbot

./: pyproject.toml
src/: prompt.txt  yolo.py  yolo.yaml
