[tool.poetry]
name = "yolo-ai-cmdbot"
version = "0.1.0"
description = ""
authors = ["mohamed-aziz <me@aziz.tn>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
yolo = 'src.yolo:main'

[tool.poetry.dependencies]
python = "^3.10"
openai = "0.27"
termcolor = "2.2.0"
colorama = "0.4.4"
python-dotenv = "1.0.0"
distro = "1.7.0"
pyyaml = "5.4.1"
pyperclip = "1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
